Get current user

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome @Html.DisplayFor(model => model.userId)</h1>
+    <h1 class="display-4">Welcome @Html.DisplayFor(model => model.UserId)</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
