--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome @Html.DisplayFor(model => model.UserId)</h1>
+    <h1 class="display-4">Welcome</h1>
+	<h2>Authenticated: @Html.DisplayFor(model => model.IsAuthenticated)</h2>
+	<h2>User Source: @Html.DisplayFor(model => model.Source)</h2>
+	<h2>User Id:  @Html.DisplayFor(model => model.UserId)</h2>
+	<h2>User Name:  @Html.DisplayFor(model => model.Name)</h2>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
