--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,35 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-	<h2>Authenticated: @Html.DisplayFor(model => model.IsAuthenticated)</h2>
-	<h2>Authentication Type: @Html.DisplayFor(model => model.AuthType)</h2>
-	<h2>User Id:  @Html.DisplayFor(model => model.UserId)</h2>
-	<h2>User Name:  @Html.DisplayFor(model => model.Name)</h2>
-	<h2>Claims:</h2>
-	<table border="1">
-			<tr>
-			<td>Issuer</td>
-			<td>Subject</td>
-			<td>Type</td>
-			<td>Value</td>
-			<td>ValueType</td>
-			<td>Property Key</td>
-			<td>Property value</td>
-			</tr>
-		@foreach(Claim claim in Model.Claims)
-		{
-			<tr>
-			<td>@claim.Issuer</td>
-			<td>@claim.Subject</td>
-			<td>@claim.Type</td>
-			<td>@claim.Value</td>
-			<td>@claim.ValueType</td>
-			<td>@claim.Properties.FirstOrDefault().Key</td>
-			<td>@claim.Properties.FirstOrDefault().Value</td>
-			</tr>
-		}
-	</table>
-	<h2>Compiled in:  @Html.DisplayFor(model => model.CompileMode)</h2>
+    <h1 class="display-4">Welcome @Html.DisplayFor(model => model.Name)</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
