--- a/Views/Home/AuthView.cshtml
+++ b/Views/Home/AuthView.cshtml
@@ -40,7 +40,14 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CompileMode)
         </dd>
+		<dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsInRole)
+		</dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsInRole)
+        </dd>
     </dl>
+
 		<h4>Claims:</h4>
 	<table border="1">
 			<tr>
