--- a/Views/Supplier/Index.cshtml
+++ b/Views/Supplier/Index.cshtml
@@ -49,16 +49,17 @@
                             delOptions: { url: 'Supplier/Delete' }
                         }
                     },
-                   { label: 'Supplier Id', name: 'supplierId', editable: true, editoptions: { readonly: 'readonly' }},
-                   { label: 'Supplier Code', name: 'supplierCode', editable: true, edittype:"text"  },
-                   { label: 'Supplier Name', name: 'name', editable: true, edittype:"text" },
-                   { label: 'Address1', name: 'address1', editable: true, edittype:"text" },
-                   { label: 'Address2', name: 'address2',editable: true, edittype:"text" },
-                   { label: 'City', name: 'city',editable: true, edittype:"text" },
-                   { label: 'Province', name: 'province',editable: true, edittype:"text" },
-                   { label: 'Postal Code', name: 'postalCode',editable: true, edittype:"text" },
-                   { label: 'General Phone', name: 'generalPhone',editable: true, edittype:"text" },
-                   { label: 'Contact 1', name: 'contactName',editable: true, edittype:"text" }
+                   { label: 'Supplier Id', name: 'supplierId', editable: true, editoptions: { readonly: 'readonly' }, key: true},
+                   { label: 'Supplier Code', name: 'supplierCode', editable: true, edittype:"text",editoptions: {maxlength: 15}},
+                   { label: 'Supplier Name', name: 'name', editable: true, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
+                   { label: 'Address1', name: 'address1', editable: true, edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Address2', name: 'address2',editable: true, edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'City', name: 'city',editable: true, edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Province', name: 'province',editable: true, edittype:"text",editoptions: {maxlength: 50} },
+                   { label: 'Postal Code', name: 'postalCode',editable: true, edittype:"text",editoptions: {maxlength: 12} },
+                   { label: 'General Phone', name: 'generalPhone',editable: true, edittype:"text",editrules:{custom:true, custom_func:IsPhoneNumber()},editable: true},
+                   { label: 'Contact 1 Name', name: 'contactName', edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Contact 1 Phone 1 ', name: 'contact1Phone1',edittype:"text",editrules:{custom:true, custom_func:IsPhoneNumber()},editable: true }
                ],
                viewrecords: true,
                height: 250,
@@ -109,6 +110,14 @@
         $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
         grid.trigger("reloadGrid", [{ page: 1 }]);
     }
+    
+      function IsPhoneNumber(value,colname)
+       {
+         if (value < 10 || value >11) 
+              return [false,"Please enter valid phone number"];
+                else 
+             return [true,""];
+      }
 
 </script>
 }
