--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,144 +1,132 @@
-﻿@model PaginatedList<WETT.Data.Product>
-
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @{
     ViewData["Title"] = "Product";
 }
 
-<h1>Product</h1>
-
-<p> 
-    <a asp-action="Create">Create New</a>
-</p>
-
-<form asp-action="Index" method="get">
-    <div class="form-actions no-color">
-        <p>
-            Find by Description or Sku: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
-            <input type="submit" value="Search" class="btn btn-default" /> |
-            <a asp-action="Index">Back to Full List</a>
-        </p>
+<div class="text-center">
+    <h1 class="display-4">Product</h1>
+</div>
+<fieldset class="scheduler-border">
+    <legend class="scheduler-border">Search</legend>
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Description" aria-label="Description" aria-describedby="basic-addon2" id="description">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button">Search</button>
+        </div>
     </div>
-</form>
+</fieldset>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-              
-                Supplier
-            </th>
-            <th>
+<table id="product" style="align: center"></table>
+<div id="jqGridPager"></div>
+
+@section scripts {
+<script type="text/javascript">
+
+    $.jgrid.defaults.styleUI = 'Bootstrap';
+    $.jgrid.defaults.responsive = true;
+
+    $(document).ready(function() {
+       $("#product").jqGrid({
+               url: 'Products/GetAll',
+               mtype: "GET",
+               guiStyle: "bootstrap",
+               iconSet: "fontAwesome",
+               idPrefix: "gb1_",
+               datatype: "json",
+               autowidth:true,
+               colModel: [
+                   {
+                        label: "Edit Actions",
+                        name: "actions",
+                        width: 150,
+                        formatter: "actions",
+                        formatoptions: {
+                            keys: true,
+                            editOptions: { },
+                            addOptions: { },
+                            delOptions: { url: 'Products/Delete' }
+                        }
+                    },
+
+
+ 			       { label: 'Product Id',name: 'productId', editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+
+                   { label: 'Supplier Id',name: 'supplierId', editable: true, edittype:"text", editoptions: { readonly: 'readonly'}},
+
+			       { label: 'Sku',name: 'sku', editable: true, edittype:"text", editoptions: { maxlength: 50}, editrules: { required: true }},
+
+			       { label: 'Description',name: 'description', editable: true, edittype:"text", editoptions: { maxlength: 100}, editrules: { required: true }},
+
+                   { label: 'SingleWeight',name: 'singleWeight', editable: true, edittype:"text", editoptions: { maxlength:15},editrules: { required: true }},
+
+                   { label: 'ContainerWeight', name: 'containerWeight', editable: true, edittype:"text",editoptions: {maxlength: 15}, editrules: { required: true } },
+
+                   { label: 'CaseWeight', name: 'caseWeight', editable: true, edittype:"text",editoptions: {maxlength: 100},editrules: { required: true } },
+
+                   { label: 'PackSize', name: 'packSize', editable: true, edittype:"text",editoptions: {maxlength: 100},editrules: { required: true }},
+
+                   { label: 'HlSingle', name: 'hlSingle',editable: true, edittype:"text", editoptions: {maxlength: 100}},
+
+                   { label: 'HlContainer', name: 'hlContainer',editable: true, edittype:"text", editoptions: {maxlength: 100}},
+
+                   { label: 'HlCase', name: 'hlCase',editable: true, edittype:"text", editoptions: {maxlength: 100}}
+                 ], 
+               viewrecords: true,
+               height: 250,
+               rowNum: 20,
+               pager: "#jqGridPager",
+               editurl: 'Products/Update'
+               //onSelectRow: editRow, // the javascript function to call on row click. will use to put the row in edit mode
+
+           }).hideCol("productId");
                
-                 <a asp-action="Index" asp-route-sortOrder="@ViewData["SkuParm"]" asp-route-currentFilter ="@ViewData["CurrentFilter"]">Sku</a>
-            </th>
-            <th>
-               
-                 <a asp-action="Index" asp-route-sortOrder="@ViewData["DescriptionParm"]" asp-route-currentFilter ="@ViewData["CurrentFilter"]">Description</a>
-            </th>
-            <th>
-               
-                SingleWeight
-            </th>
-            <th>
-               
-                ContainerWeight
-            </th>
-            <th>
-              
-               CaseWeight
-            </th>
-            <th>
-               
-                PackSize
-            </th>
-            <th>
-                
-                HlSingle
-            </th>
-            <th>
-               
-                HlContainer
-            </th>
-            <th>
-                
-                HlCase
-            </th>
-        
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Supplier.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sku)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SingleWeight)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContainerWeight)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CaseWeight)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PackSize)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HlSingle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HlContainer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HlCase)
-            </td>
-       <!--      <td>
-                @Html.DisplayFor(modelItem => item.InsertUserId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InsertTimestamp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdateUserId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdateTimestamp)
-            </td>-->
-           
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ProductId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ProductId">Delete</a>
-            </td>
-        </tr>
+
+
+
+           $('#product').navGrid('#jqGridPager',
+               // the buttons to appear on the toolbar of the grid
+               { edit: false, add: true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
+               // options for the Add Dialog
+               {},
+               {
+                   closeAfterAdd: true,
+                   recreateForm: true,
+                   errorTextFormat: function (data) {
+                       return 'Error: ' + data.responseText
+                   },
+                   url: "Products/Add"
+               });
+
+       });
+
+       $('#product').setGridWidth(parseInt($(window).width()) - 20);
+
+       $("#description").on('change keyup paste', function () {
+           SearchByProductName();
+       });
+
+    function SearchByProductName()
+    {
+        //  Fetch the text from our <input> control
+        var searchString = $("#description").val();
+
+        //  Prepare to pass a new search filter to our jqGrid
+        var f = { groupOp: "AND", rules: [] };
+
+        //  Remember to change the following line to reflect the jqGrid column you want to search for your string in
+        //  In this example, I'm searching through the UserName column.
+
+        f.rules.push({ field: "name", op: "cn", data: searchString });
+
+        var grid = $('#product');
+        grid[0].p.search = f.rules.length > 0;
+        $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
+        grid.trigger("reloadGrid", [{ page: 1 }]);
+    }
+
+
+
+</script>
 }
-    </tbody>
-</table>
-
-@{
-    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
-    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
-}
-
-<a asp-action="Index"
-   asp-route-sortOrder="@ViewData["CurrentSort"]"
-   asp-route-pageNumber="@(Model.PageIndex - 1)"
-   asp-route-currentFilter="@ViewData["CurrentFilter"]"
-   class="btn btn-default @prevDisabled">
-    Previous
-</a>
-<a asp-action="Index"
-   asp-route-sortOrder="@ViewData["CurrentSort"]"
-   asp-route-pageNumber="@(Model.PageIndex + 1)"
-   asp-route-currentFilter="@ViewData["CurrentFilter"]"
-   class="btn btn-default @nextDisabled">
-    Next
-</a>
