--- a/Views/Supplier/Index.cshtml
+++ b/Views/Supplier/Index.cshtml
@@ -40,7 +40,8 @@
                    {
                         label: "Edit Actions",
                         name: "actions",
-                        width: 100,
+                        width: 125,
+                        fixed:true,
                         formatter: "actions",
                         formatoptions: {
                             keys: true,
@@ -50,16 +51,20 @@
                         }
                     },
                    { label: 'Supplier Id', name: 'supplierId', editable: true, editoptions: { readonly: 'readonly' }, key: true},
-                   { label: 'Supplier Code', name: 'supplierCode', editable: true,editrules: { required: true }, edittype:"text",editoptions: {maxlength: 15}},
-                   { label: 'Supplier Name', name: 'name', editable: true, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
-                   { label: 'Address1', name: 'address1', editable: true, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
-                   { label: 'Address2', name: 'address2',editable: true, edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'City', name: 'city',editable: true, edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'Province', name: 'province',editable: true, edittype:"text",editoptions: {maxlength: 50} },
-                   { label: 'Postal Code', name: 'postalCode',editable: true, edittype:"text",editoptions: {maxlength: 12} },
-                   { label: 'General Phone', name: 'generalPhone',editable: true, edittype:"text",editable: true,editrules:{custom:true, custom_func:IsPhoneNumber, number:true}},
-                   { label: 'Contact 1 Name', name: 'contactName', edittype:"text",editoptions: {maxlength: 100} },
-                   { label: 'Contact 1 Phone 1 ', name: 'contact1Phone1',edittype:"text",editable: true,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} }
+                   { label: 'Supplier Code', name: 'supplierCode',fixed:true, editable: true,width:120,editrules: { required: true }, edittype:"text",editoptions: {maxlength: 15}},
+                   { label: 'Supplier Name', name: 'name',fixed:true, editable: true,width:175, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
+                   { label: 'Address1', name: 'address1',fixed:true, editable: true,width:150, edittype:"text",editrules: { required: true },editoptions: {maxlength: 100} },
+                   { label: 'Address2', name: 'address2',fixed:true,editable: true,width:150, edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'City', name: 'city',fixed:true,editable: true,width:100,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Province', name: 'province',fixed:true,editable: true,width:80, edittype:"text",editoptions: {maxlength: 50} },
+                   { label: 'Postal Code', name: 'postalCode',fixed:true,editable: true,width:100, edittype:"text",editoptions: {maxlength: 12} },
+                   { label: 'General Phone', name: 'generalPhone',fixed:true,editable: true, width:100,edittype:"text",editrules:{custom:true, custom_func:IsPhoneNumber, number:true}},
+                   { label: 'Contact 1 Name', name: 'contact1Name',fixed:true,editable: true, width:150,edittype:"text",editoptions: {maxlength: 100} },
+                   { label: 'Contact 1 Phone 1 ', name: 'contact1Phone1',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'Contact 1 Phone 2 ', name: 'contact1Phone2',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'Contact 2 Name', name: 'contact2Name',fixed:true, edittype:"text",edittable: true, width:150,editoptions: {maxlength: 100} },
+                   { label: 'Contact 2 Phone 1 ', name: 'contact2Phone1',fixed:true,edittype:"text",editable: true,width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} },
+                   { label: 'Contact 2 Phone 2 ', name: 'contact2Phone2',fixed:true,editable: true,edittype:"text",width:120,editrules:{custom:true, custom_func:IsPhoneNumber, number:true, required: false} }
                ],
                viewrecords: true,
                height: 250,
@@ -86,8 +91,8 @@
                });
 
        });
-
-       $('#supplier').setGridWidth(parseInt($(window).width()) - 20);
+        
+        $('#supplier').setGridWidth(60);
 
        $("#supplierName").on('change keyup paste', function () {
            SearchBySupplierName();
