update to phone validation

--- a/Views/Supplier/Index.cshtml
+++ b/Views/Supplier/Index.cshtml
@@ -119,7 +119,10 @@
     
       function IsPhoneNumber(value,colname)
        {
-         if (value.length < 10 || value.length >11) 
+            var phoneNum = /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/;
+         //if (value.length < 10 || value.length >11)
+         if(!value.match(phoneNum))
+
          {
               return [false,"Please enter valid phone number"];
          }
