--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -35,6 +35,12 @@
                iconSet: "fontAwesome",
                idPrefix: "gb1_",
                datatype: "json",
+               ajaxSelectOptions: {
+                          type: "GET", 
+                          contentType: 'application/json; charset=utf-8',
+                          dataType: "json",
+                          cache: false,
+                      },
                autowidth:true,
                colModel: [
                    {
@@ -51,11 +57,23 @@
                     },
                    { label: ' Product Code',name: 'sku',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength: 50}, editrules: { required: true }},
 
-			       { label: 'Name',name: 'description',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength: 100}, editrules: { required: true }},
+			       { label: 'Name',name: 'description',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength: 150}, editrules: { required: true }},
 
  			       { label: 'Product Id',name: 'productId',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
 
-                   { label: 'Supplier',name: 'supplierId',fixed:true,width:125, editable: true, edittype:"select",formatter: 'select', editoptions: { value: getAllSelectOptions()}},
+                   { label: 'Supplier',name: 'supplierId',fixed:true,width:125, editable: true, edittype:"select",formatter: 'select', editoptions: {muliple:true, dataUrl:'Products/CreateSelectList', 
+                   buildSelect: function(data) {
+                 var items=data.split(",");
+                 var sel='<select>';
+                 for (var i = 0; i < items.length; i++) {
+                 var values=items[i].split(":");
+                 sel += '<option value="' + values[0] + '">' + values[1] + '</option>';
+                 }
+                 sel +="</select>";
+                 console.log(sel);
+                 return sel;
+                 
+                 }}},
 
                    { label: 'Single Weight',name: 'singleWeight',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength:15},editrules: { required: true }},
 
@@ -106,27 +124,32 @@
        });
         function getAllSelectOptions()
         {
-        var states = '';
+        var sel = '<select>';
       
-          //sel +='<option value="select">Select...</option>';
+          sel +='<option value="">Select</option>';
         $.getJSON('Products/CreateList', function(data) {
         if (data != null) {
             alert(data.length);
             //construct string.  
             //(or the server could return a string directly)
              for (var i = 0; i < data.length; i++) {
-            states += '<option value="' + data[i].value + '">' + data[i].text + '</option>';
+            sel += '<option value="' + data[i].value + '">' + data[i].text + '</option>';
+              //var sel = '';
+              //sel += data[i].value  + ':' + data[i].text  + ',';
                          
                  }
                 sel +="</select>";
+              // sel = sel.substring(0,sel.length-1);
+               //SupplierList= {sel};
                  }
                  alert(sel);
+                  console.log(sel);
                 return sel;
             });
-         var states = { '2': 'Carlsberg', '3': 'Moosehead Brewery', '15': 'Kokanee','16': 'mil' };
-
-        return states;
-
+         //var states = { '2': 'Carlsberg', '3': 'Moosehead Brewery', '15': 'Kokanee','16': 'mil'} ;
+         //console.log(states);
+         //alert(states.length);
+         //return states;
         }
     function SearchByProductName()
     {
@@ -147,25 +170,28 @@
         grid.trigger("reloadGrid", [{ page: 1 }]);
     }
         function getSequenceNumbers() {
+            //var SupplierList = { '2': 'Carlsberg', '3': 'Moosehead Brewery', '15': 'Kokanee','16': 'mil'} ;
+            // console.log(SupplierList);
+            //return SupplierList;
+          var SupplierList= {};
         
-        var sel = '<select>';
-      
-          //sel +='<option value="select">Select...</option>';
+
         $.getJSON('Products/CreateList', function(data) {
         if (data != null) {
-            alert(data.length);
-            //construct string.  
-            //(or the server could return a string directly)
-             for (var i = 0; i < data.length; i++) {
-            sel += '<option value="' + data[i].value + '">' + data[i].text + '</option>';
-                         
-                 }
-                sel +="</select>";
-                 }
-                 alert(sel);
-                return sel;
+            for (var i = 0; i < data.length; i++) {
+            //  SupplierList.add(data[i].value : data[i].text);
+             SupplierList[data[i].value]=data[i].text;
+
+              
+              }
+            }//if
+
             });
+            alert(SupplierList);
+            console.log(SupplierList);
+           return SupplierList;   // return Supps;
         }
 
+        
 </script>
 }
