--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -2,11 +2,11 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewData["Title"] = "Product";
+    ViewData["Title"] = "invAdj";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Product</h1>
+    <h1 class="display-4">Inventory Adjustment</h1>
 </div>
 <fieldset class="scheduler-border">
     <legend class="scheduler-border">Search</legend>
@@ -18,7 +18,7 @@
     </div>
 </fieldset>
 
-<table id="product" style="align: center"></table>
+<table id="invAdj" style="align: center"></table>
 <div id="jqGridPager"></div>
 
 @section scripts {
@@ -28,8 +28,8 @@
     $.jgrid.defaults.responsive = true;
 
     $(document).ready(function() {
-       $("#product").jqGrid({
-               url: 'Products/GetAll',
+       $("#invAdj").jqGrid({
+               url: 'invAdj/GetAll',
                mtype: "GET",
                guiStyle: "bootstrap",
                iconSet: "fontAwesome",
@@ -46,8 +46,7 @@
                    {
                         label: "Edit Actions",
                         name: "actions",
-                        width: 100,
-                        fixed:true,
+                        width: 125,
                         formatter: "actions",
                         formatoptions: {
                             keys: true,
@@ -56,27 +55,15 @@
                             delOptions: { url: 'Products/Delete' }
                         }
                     },
-                   { label: ' Product Code',name: 'sku',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength: 50}, editrules: { required: true }},
-
-			       { label: 'Product Name',name: 'description',fixed:true,width:150, editable: true, edittype:"text", editoptions: { maxlength: 150}, editrules: { required: true }},
 
  			       { label: 'Product Id',name: 'productId',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Supplier',name: 'name',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Product Name',name: 'description',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Locations',name: 'description',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Updated Stock',name: 'amount',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Reasons',name: 'description',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true},
+                   { label: 'Notes',name: 'comments',fixed:true,width:100, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}, key: true}
 
-                   { label: 'Supplier',name: 'supplierId',fixed:true,width:125, editable: true, edittype:"select",formatter: 'select', editoptions: {value: getSequenceNumbers()}},
-
-                   { label: 'Single Weight',name: 'singleWeight',fixed:true,width:100, editable: true, edittype:"text", editoptions: { maxlength:15},editrules: { required: true }},
-
-                   { label: 'Containe Weight', name: 'containerWeight',fixed:true,width:125, editable: true, edittype:"text",editoptions: {maxlength: 15}, editrules: { required: true } },
-
-                   { label: 'Case Weight', name: 'caseWeight',fixed:true,width:100, editable: true, edittype:"text",editoptions: {maxlength: 100},editrules: { required: true } },
-
-                   { label: 'Pack Size', name: 'packSize',fixed:true,width:100, editable: true, edittype:"text",editoptions: {maxlength: 100},editrules: { required: true }},
-
-                   { label: 'Hl Single', name: 'hlSingle',fixed:true,width:100,editable: true, edittype:"text", editoptions: {maxlength: 100}},
-
-                   { label: 'Hl Container', name: 'hlContainer',fixed:true,width:100,editable: true, edittype:"text", editoptions: {maxlength: 100}},
-
-                   { label: 'Hl Case', name: 'hlCase',fixed:true,width:80,editable: true, edittype:"text", editoptions: {maxlength: 100}}
                  ], 
                viewrecords: true,
                height: 250,
@@ -90,7 +77,7 @@
 
 
 
-           $('#product').navGrid('#jqGridPager',
+           $('#invAdj').navGrid('#jqGridPager',
                // the buttons to appear on the toolbar of the grid
                { edit: false, add: true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
                // options for the Add Dialog
@@ -106,12 +93,40 @@
 
        });
 
-       $('#product').setGridWidth(parseInt($(window).width()) - 20);
+       $('#invAdj').setGridWidth(parseInt($(window).width()) - 20);
 
        $("#description").on('change keyup paste', function () {
            SearchByProductName();
        });
-
+        function getAllSelectOptions()
+        {
+        var sel = '<select>';
+      
+          sel +='<option value="">Select</option>';
+        $.getJSON('Products/CreateList', function(data) {
+        if (data != null) {
+            alert(data.length);
+            //construct string.  
+            //(or the server could return a string directly)
+             for (var i = 0; i < data.length; i++) {
+            sel += '<option value="' + data[i].value + '">' + data[i].text + '</option>';
+              //var sel = '';
+              //sel += data[i].value  + ':' + data[i].text  + ',';
+                         
+                 }
+                sel +="</select>";
+              // sel = sel.substring(0,sel.length-1);
+               //SupplierList= {sel};
+                 }
+                 alert(sel);
+                  console.log(sel);
+                return sel;
+            });
+         //var states = { '2': 'Carlsberg', '3': 'Moosehead Brewery', '15': 'Kokanee','16': 'mil'} ;
+         //console.log(states);
+         //alert(states.length);
+         //return states;
+        }
     function SearchByProductName()
     {
         //  Fetch the text from our <input> control
@@ -125,28 +140,29 @@
 
         f.rules.push({ field: "name", op: "cn", data: searchString });
 
-        var grid = $('#product');
+        var grid = $('#invAdj');
         grid[0].p.search = f.rules.length > 0;
         $.extend(grid[0].p.postData, { filters: JSON.stringify(f) });
         grid.trigger("reloadGrid", [{ page: 1 }]);
     }
         function getSequenceNumbers() {
-          var SupplierList= {};
-
-        $.ajaxSetup( { "async": false } );
-        $.getJSON('Products/CreateList', function(data) {
+            //var SupplierList = { '2': 'Carlsberg', '3': 'Moosehead Brewery', '15': 'Kokanee','16': 'mil'} ;
+             //console.log(SupplierList);
+            //return SupplierList;
+          var SupplierList= {'2':'selectList'};
+               SupplierList[15]='konakee';
+         // var SupplierList;
+         $.getJSON('Products/CreateList', function(data) {
         if (data != null) {
             for (var i = 0; i < data.length; i++) {
              SupplierList[data[i].value]=data[i].text;
-              } 
+             alertg(data[i].value);
+              }
             }//if
-
+           console.log(SupplierList);
+           return SupplierList;  
             });
-            $.ajaxSetup( { "async": true } );
-           return SupplierList; 
-
         }
-
 
         
 </script>
